--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,3 +5,175 @@ html {
 }
 	*, *:after, *:before
 	{box-sizing: inherit;}
+
+
+#Surf_Paddle_Page {
+	width: 1200px;
+	position: relative;
+	padding-bottom: 30px;
+	
+
+
+}
+
+#heading{
+	background-image:url(images/ocean.jpeg);
+	background-size: cover;
+	height: 500px;
+
+}
+#heading > p {
+	color:#fff;
+	font-size: 80px;
+	text-align: center;
+	padding-top: 230px;
+	text-transform: uppercase;
+
+}
+h1 {
+	font-size: 1em;
+	color:rgb(8,52,82);
+	text-align: center;
+	
+}
+
+#articles {
+	display:flex;
+	height: 1000px;
+}
+
+
+.section1 {
+	width: 600px;
+	margin: 2px 40px 100px 2px;
+	padding-left: 100px;
+
+	
+}
+
+h4 {
+	font-size: 50px;
+	text-align: center;
+	color: rgb(8,52,82);
+	text-transform: uppercase;
+}
+h5 {
+	font-size: 9px;
+}
+
+ul {
+	margin-left: -70px;
+
+}
+.click {
+	float: left;
+	width:130px;
+	height:30px;
+	background-color: rgb(163,179,191);
+	margin: 5px 0px -25px 45px;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 8px;
+	padding-top: 10px;
+}
+
+.icons {
+	float:left;
+	width: 40px;
+	height:30px;
+	background-color: rgb(80,89,95);
+	margin:-5px 123px 0px 13px;
+	text-align: center;
+	font-size: 9px;
+	padding-top: 5px;
+}
+
+.click:nth-child(3) {
+	background-color: rgb(16,109,179);
+}
+
+.icons:nth-child(3) {
+	background-color: rgb(8,52,82);
+}
+.section2 {
+	width:400px;
+	margin: 60px 50px 2px;
+	
+}
+
+
+
+#bottomtitle {
+	font-size: 40px;
+	text-align: center;
+	padding-top: 10px;
+	color:rgb(8,52,82);
+	text-transform: uppercase;
+
+}
+
+#imagelinks {
+	height:330px;
+	display:flex;
+	flex-direction: row;
+
+
+
+}
+
+.image {
+	width:25%;
+	text-align: center;
+	font-size:30px;
+	padding-top: 280px;
+
+}
+
+#imagelinks div:first-child {
+	background-image: url(images/surfer_girl.jpeg);
+	background-size:cover;
+	color: rgb(6,50,80);
+
+}
+
+#imagelinks div:nth-child(2) {
+	background-image: url(images/beer_flight.jpeg);
+	background-size: cover;
+	color:#fff;
+}	
+
+.image:nth-child(3) {
+	background-image: url(images/Alan.jpeg);
+	background-size: cover;
+	color: rgb(6,50,80);
+}
+
+.image:nth-child(4) {
+	background-image: url(images/booze.jpeg);
+	background-size: cover;
+	color: rgb(6,50,80);
+}
+
+#footer {
+	background-color: rgb(6,50,80);
+	height:100px;
+}
+
+.navitems {
+	list-style:none;
+	margin:0;
+	padding: 40px;
+	width: 1200px;
+
+}
+
+li {
+	display: inline;
+	margin-left:10px;
+	color: #fff;
+	text-align: center;
+}
+
+.navitems > li:first-child {
+	margin-left: 650px;
+}
